--- a/pydeequ_pyspark.ipynb
+++ b/pydeequ_pyspark.ipynb
@@ -17,6 +17,34 @@
     {
       "cell_type": "code",
       "source": [
+        "!git clone https://github.com/waghts95/pyspark_pydeequ.git"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZesjF4fJqp-i",
+        "outputId": "af0be047-f197-47a7-c6d7-601abd8ae92e"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'pyspark_pydeequ'...\n",
+            "remote: Enumerating objects: 6, done.\u001b[K\n",
+            "remote: Counting objects: 100% (6/6), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+            "remote: Total 6 (delta 0), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (6/6), 6.57 MiB | 19.32 MiB/s, done.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "!pip3 install py4j==0.10.9.7"
       ],
       "metadata": {
@@ -177,12 +205,12 @@
     {
       "cell_type": "code",
       "source": [
-        "df = spark.read.csv('/content/USvideos.csv', header=True)"
+        "df = spark.read.csv('/content/pyspark_pydeequ/USvideos.csv', header=True)"
       ],
       "metadata": {
         "id": "0Kc1na6WdCsv"
       },
-      "execution_count": 8,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -195,9 +223,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FpNMTWrcdm-f",
-        "outputId": "6d1b8cf3-d48e-4ff2-ea34-c888f18aa49c"
+        "outputId": "8e309541-8545-402e-da1d-c80190dd9b2c"
       },
-      "execution_count": 12,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,26 +234,26 @@
             "+-----------+-------------+--------------------+--------------------+-----------+--------------------+--------------------+-------+------+--------+-------------+--------------------+-----------------+----------------+----------------------+--------------------+\n",
             "|   video_id|trending_date|               title|       channel_title|category_id|        publish_time|                tags|  views| likes|dislikes|comment_count|      thumbnail_link|comments_disabled|ratings_disabled|video_error_or_removed|         description|\n",
             "+-----------+-------------+--------------------+--------------------+-----------+--------------------+--------------------+-------+------+--------+-------------+--------------------+-----------------+----------------+----------------------+--------------------+\n",
-            "|2kyS6SvSYSE|     17.14.11|WE WANT TO TALK A...|        CaseyNeistat|         22|2017-11-13T17:13:...|     SHANtell martin| 748374| 57527|    2966|        15954|https://i.ytimg.c...|            False|           False|                 False|SHANTELL'S CHANNE...|\n",
-            "|1ZAPwfrtAFY|     17.14.11|The Trump Preside...|     LastWeekTonight|         24|2017-11-13T07:30:...|\"last week tonigh...|2418783| 97185|    6146|        12703|https://i.ytimg.c...|            False|           False|                 False|One year after th...|\n",
-            "|5qpjK5DgCt4|     17.14.11|Racist Superman |...|        Rudy Mancuso|         23|2017-11-12T19:05:...|\"racist superman\"...|3191434|146033|    5339|         8181|https://i.ytimg.c...|            False|           False|                 False|WATCH MY PREVIOUS...|\n",
-            "|puqaWrEC7tY|     17.14.11|Nickelback Lyrics...|Good Mythical Mor...|         24|2017-11-13T11:00:...|\"rhett and link\"|...| 343168| 10172|     666|         2146|https://i.ytimg.c...|            False|           False|                 False|Today we find out...|\n",
-            "|d380meD0W0M|     17.14.11|I Dare You: GOING...|            nigahiga|         24|2017-11-12T18:01:...|\"ryan\"|\"higa\"|\"hi...|2095731|132235|    1989|        17518|https://i.ytimg.c...|            False|           False|                 False|I know it's been ...|\n",
-            "|gHZ1Qz0KiKM|     17.14.11|2 Weeks with iPho...|            iJustine|         28|2017-11-13T19:07:...|\"ijustine\"|\"week ...| 119180|  9763|     511|         1434|https://i.ytimg.c...|            False|           False|                 False|Using the iPhone ...|\n",
-            "|39idVpFF7NQ|     17.14.11|Roy Moore & Jeff ...| Saturday Night Live|         24|2017-11-12T05:37:...|\"SNL\"|\"Saturday N...|2103417| 15993|    2445|         1970|https://i.ytimg.c...|            False|           False|                 False|Embattled Alabama...|\n",
-            "|nc99ccSXST0|     17.14.11|5 Ice Cream Gadge...|  CrazyRussianHacker|         28|2017-11-12T21:50:...|\"5 Ice Cream Gadg...| 817732| 23663|     778|         3432|https://i.ytimg.c...|            False|           False|                 False|Ice Cream Pint Co...|\n",
-            "|jr9QtXwC9vc|     17.14.11|The Greatest Show...|    20th Century Fox|          1|2017-11-13T14:00:...|\"Trailer\"|\"Hugh J...| 826059|  3543|     119|          340|https://i.ytimg.c...|            False|           False|                 False|Inspired by the i...|\n",
-            "|TUmyygCMMGA|     17.14.11|Why the rise of t...|                 Vox|         25|2017-11-13T13:45:...|\"vox.com\"|\"vox\"|\"...| 256426| 12654|    1363|         2368|https://i.ytimg.c...|            False|           False|                 False|For now, at least...|\n",
-            "|9wRQljFNDW8|     17.14.11|Dion Lewis' 103-Y...|                 NFL|         17|2017-11-13T02:05:...|\"NFL\"|\"Football\"|...|  81377|   655|      25|          177|https://i.ytimg.c...|            False|           False|                 False|New England Patri...|\n",
-            "|VifQlJit6A0|     17.14.11|(SPOILERS) 'Shiva...|                 amc|         24|2017-11-13T03:00:...|\"The Walking Dead...| 104578|  1576|     303|         1279|https://i.ytimg.c...|            False|           False|                 False|Shiva arrives jus...|\n",
-            "|5E4ZBSInqUU|     17.14.11|Marshmello - Bloc...|          marshmello|         10|2017-11-13T17:00:...|\"marshmello\"|\"blo...| 687582|114188|    1333|         8371|https://i.ytimg.c...|            False|           False|                 False|WATCH SILENCE MUS...|\n",
-            "|GgVmn66oK_A|     17.14.11|Which Countries A...|       NowThis World|         25|2017-11-12T14:00:...|\"nowthis\"|\"nowthi...| 544770|  7848|    1171|         3981|https://i.ytimg.c...|            False|           False|                 False|The world at larg...|\n",
-            "|TaTleo4cOs8|     17.14.11|SHOPPING FOR NEW ...|     The king of DIY|         15|2017-11-12T18:30:...|\"shopping for new...| 207532|  7473|     246|         2120|https://i.ytimg.c...|            False|           False|                 False|Today we go shopp...|\n",
-            "|kgaO45SyaO4|     17.14.11|    The New SpotMini|      BostonDynamics|         28|2017-11-13T20:09:...|\"Robots\"|\"Boston ...|  75752|  9419|      52|         1230|https://i.ytimg.c...|            False|           False|                 False|For more informat...|\n",
-            "|ZAQs-ctOqXQ|     17.14.11|One Change That W...|             Cracked|         23|2017-11-12T17:00:...|\"pacific rim\"|\"pa...| 295639|  8011|     638|         1256|https://i.ytimg.c...|            False|           False|                 False|Pacific Rim was s...|\n",
-            "|YVfyYrEmzgM|     17.14.11|How does your bod...|              TED-Ed|         27|2017-11-13T16:00:...|\"TED\"|\"TED-Ed\"|\"T...|  78044|  5398|      53|          385|https://i.ytimg.c...|            False|           False|                 False|Check out our Pat...|\n",
-            "|eNSN6qet1kE|     17.14.11|HomeMade Electric...|         PeterSripol|         28|2017-11-13T15:30:...|\"ultralight\"|\"air...|  97007| 11963|      36|         2211|https://i.ytimg.c...|            False|           False|                 False|aaaannnd now to f...|\n",
-            "|B5HORANmzHw|     17.14.11|Founding An Inbre...|             SciShow|         27|2017-11-12T22:00:...|\"SciShow\"|\"scienc...| 223871|  8421|     191|         1214|https://i.ytimg.c...|            False|           False|                 False|Thanks to 23AndMe...|\n",
+            "|5iVxBDPlbc4|     17.22.12|Why Imperial Admi...|     The Lore Master|         24|2017-12-18T18:19:...|\"Why Imperial Adm...| 126622|  5601|      72|          535|https://i.ytimg.c...|            False|           False|                 False|Why Imperial Admi...|\n",
+            "|D0N3qaqXymY|     17.22.12|Steelers Robbed B...|     Blurred Culture|         17|2017-12-18T00:45:...|\"Steelers Robbed ...| 208872|  1030|     826|         1802|https://i.ytimg.c...|            False|           False|                 False|It seemed like th...|\n",
+            "|C5jcZGcMdaI|     17.22.12|Half Magic - Offi...|   Momentum Pictures|          1|2017-12-19T14:04:...|              [none]|  14046|    51|       6|            9|https://i.ytimg.c...|            False|           False|                 False|Follow Momentum P...|\n",
+            "|jw7q_kcQXO8|     17.22.12|Electromechanical...|           negermano|         10|2017-12-18T17:10:...|\"pixel|\"\"electrom...|   2492|     4|       0|            0|https://i.ytimg.c...|            False|           False|                 False|This is a view of...|\n",
+            "|SO0HTI8QuQU|     17.22.12|Buying People Pre...|   Third Leg Studios|         23|2017-12-17T17:08:...|\"christmas presen...| 278333|  8179|     247|          258|https://i.ytimg.c...|            False|           False|                 False|Subscribe for mor...|\n",
+            "|1Znl8OUBa_o|     17.22.12|Gucci Gang Countr...|            nigahiga|         24|2017-12-16T16:55:...|\"ryan|\"\"higa\"\"|\"\"...|4498768|276406|    5050|        39345|https://i.ytimg.c...|            False|           False|                 False|Leave your Dear R...|\n",
+            "|0IC3II1i5yM|     17.22.12|When Harry met Ba...|The Royal Family ...|         25|2017-12-17T18:48:...|\"royal|\"\"royal fa...| 112552|  1674|     484|          639|https://i.ytimg.c...|            False|           False|                 False|Prince Harry quiz...|\n",
+            "|GjDK_6NtYGQ|     17.22.12|50 TOTALLY CRAZY ...|     5-Minute Crafts|         26|2017-12-16T16:30:...|\"5-Minute Crafts|...|5600788| 41260|    5263|         3258|https://i.ytimg.c...|            False|           False|                 False|Subscribe to 5-Mi...|\n",
+            "|gy_aLyB41wQ|     17.22.12|I Bought a Bitcoi...|          TechSmartt|         28|2017-12-16T22:59:...|\"bitcoin|\"\"btc\"\"|...| 943803| 28440|    2948|         4470|https://i.ytimg.c...|            False|           False|                 False|I found a guy on ...|\n",
+            "|74LFfWHc0oo|     17.22.12|STAR WARS THE LAS...|    Andre Black Nerd|         24|2017-12-17T19:21:...|\"star wars|\"\"star...| 125763|  6835|     752|         2246|https://i.ytimg.c...|            False|           False|                 False|More Black Nerd M...|\n",
+            "|AEAHRq62p3Q|     17.22.12|Steelers' Jesse J...|           NFL World|         17|2017-12-18T00:34:...|  \"NFL|\"\"Football\"\"\"|  72346|   220|     165|          578|https://i.ytimg.c...|            False|           False|                 False|Follow Us on Twit...|\n",
+            "|4vZJn6r0dRw|     17.22.12|YOUTUBERS REACT T...|                 FBE|         24|2017-12-16T22:00:...|\"top 10|\"\"luis fo...|1595752| 44879|    1299|         4910|https://i.ytimg.c...|            False|           False|                 False|CLICK TO SUBSCRIB...|\n",
+            "|25Uouf_9DUk|     17.22.12|Controversial inc...|           Sport Hub|         22|2017-12-18T00:35:...|              [none]|  56687|   107|      60|          282|https://i.ytimg.c...|            False|           False|                 False|Watch: https://ww...|\n",
+            "|MXFhiN0tM3s|     17.22.12|Trump delivers re...|     Washington Post|         25|2017-12-18T19:39:...|\"national securit...|  32693|   442|     431|          535|https://i.ytimg.c...|            False|           False|                 False|President Trump d...|\n",
+            "|W-KEuvd3S-Q|     17.22.12|Introducing Commu...|            grandayy|         24|2017-12-16T18:33:...|\"amazon echo|\"\"am...| 983154| 63925|    2175|         4097|https://i.ytimg.c...|            False|           False|                 False|Twitter: https://...|\n",
+            "|NWeCToDgdxU|     17.22.12|Star Wars: The La...|         John Campea|         24|2017-12-17T22:09:...|\"Star Wars|\"\"The ...|  82992|  2651|     429|         1739|https://i.ytimg.c...|            False|           False|                 False|John gives his St...|\n",
+            "|r1x0X5PCYak|     17.22.12|EXTREME HOLIDAY G...|     NikkieTutorials|         26|2017-12-16T20:00:...|\"extreme holiday ...|2540265|223238|    3170|        71971|https://i.ytimg.c...|            False|           False|                 False|Make sure you sub...|\n",
+            "|2ckenWENyUg|     17.22.12|Small Details You...|              Looper|         24|2017-12-16T15:00:...|\"last jedi|\"\"the ...| 918083|  7571|     929|         1369|https://i.ytimg.c...|            False|           False|                 False|If you're new, Su...|\n",
+            "|lbOXPpVejJ0|     17.22.12|Trae Young Oklaho...|      Frankie Vision|         17|2017-12-17T01:45:...|\"Luka|\"\"Doncic\"\"|...| 220548|  1857|      26|          423|https://i.ytimg.c...|            False|           False|                 False|Song and Beats Su...|\n",
+            "|muAPJiMho2Y|     17.22.12|DELIT DE FUITE - ...|            CHRIS-RS|          2|2017-12-15T16:00:...|\"Z800|\"\"Z800E\"\"|\"...|2843579| 91342|     845|        10073|https://i.ytimg.c...|            False|           False|                 False|Et bien oui...enc...|\n",
             "+-----------+-------------+--------------------+--------------------+-----------+--------------------+--------------------+-------+------+--------+-------------+--------------------+-----------------+----------------+----------------------+--------------------+\n",
             "only showing top 20 rows\n",
             "\n"
